--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Ofutoon</string>
-    <string name="website">"https://crakac.com/ofutodon"</string>
+    <string name="website">"https://crakac.com/ofutoon"</string>
     <string name="file_provider_authority">com.crakac.ofutoon.fileprovider</string>
 
     <string name="title_activity_login">Login</string>
@@ -13,5 +13,14 @@
 
     <string name="syar">( ˘ω˘)ｽﾔｧ</string>
     <string name="sya">( ˘ω˘)</string>
+
+    <string name="dummy">XXXXXXXXXX</string>
+    <string name="boosted_by">%sさんがブーストしました</string>
+    <string name="favourited_by">%sさんがお気に入りしました</string>
+    <string name="followed_by">%sさんにフォローされました</string>
+
+    <string name="sensitive_media">閲覧注意</string>
+    <string name="hidden_insensitive_media">非表示のメディア</string>
+    <string name="tap_to_show">タップして表示</string>
 
 </resources>
